[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "folder-map"
version = "0.1.0"
description = "Read-only map of a folder of scattered files — clusters related files with visible evidence and confidence, without touching anything."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Chris Stone" }]
keywords = ["files", "organization", "read-only", "clustering", "inventory", "backup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
# Stdlib only — no runtime dependencies.
dependencies = []

[project.scripts]
folder-map = "folder_map.cli:main"

[project.urls]
Homepage = "https://github.com/CJ-Systems/miraos-folder-map"

# Source lives in dna/ — our Software 3.0 convention for "where the source is"
# (dna/ ≈ src/). The package itself is dna/folder_map/.
[tool.setuptools.packages.find]
where = ["dna"]
